--- a/public/styles.css
+++ b/public/styles.css
@@ -7,3 +7,36 @@ body {
 #signed_in {
     display: none;
 }
+#app {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+#flash_message {
+}
+
+form input[type="email"],
+form input[type="password"],
+form input[type="text"] {
+    border: 2px solid black;
+    color: black;
+    font-size: 16px;
+    padding: 8px;
+    margin-top: 4px;
+    margin-bottom: 4px;
+}
+
+form input[type="submit"] {
+    font-size: 16px;
+    border: 2px solid black;
+    padding: 6px;
+    margin-top: 4px;
+    margin-bottom: 4px;
+}
+form {
+    margin-bottom: 18px;
+}
+
+h2 {
+    margin-bottom: 4px;
+}
